tests/snapshots/test_nom_from_file__whiskas_model_2.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " The_Whiskas_Problem "
sense: Minimize
objectives:
  Total_Cost_of_Ingredients_per_can:
    name: Total_Cost_of_Ingredients_per_can
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 0.008
      - var_name: Ingr_CHICKEN
        coefficient: 0.013
      - var_name: Ingr_GEL
        coefficient: 0.001
      - var_name: Ingr_MUTTON
        coefficient: 0.01
      - var_name: Ingr_RICE
        coefficient: 0.002
      - var_name: Ingr_WHEAT
        coefficient: 0.005
constraints:
  FatRequirement:
    type: Standard
    name: FatRequirement
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 0.1
      - var_name: Ingr_CHICKEN
        coefficient: 0.08
      - var_name: Ingr_MUTTON
        coefficient: 0.11
      - var_name: Ingr_RICE
        coefficient: 0.01
      - var_name: Ingr_WHEAT
        coefficient: 0.01
    operator: GTE
    rhs: 6
  FibreRequirement:
    type: Standard
    name: FibreRequirement
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 0.005
      - var_name: Ingr_CHICKEN
        coefficient: 0.001
      - var_name: Ingr_MUTTON
        coefficient: 0.003
      - var_name: Ingr_RICE
        coefficient: 0.1
      - var_name: Ingr_WHEAT
        coefficient: 0.15
    operator: LTE
    rhs: 2
  PercentagesSum:
    type: Standard
    name: PercentagesSum
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 1
      - var_name: Ingr_CHICKEN
        coefficient: 1
      - var_name: Ingr_GEL
        coefficient: 1
      - var_name: Ingr_MUTTON
        coefficient: 1
      - var_name: Ingr_RICE
        coefficient: 1
      - var_name: Ingr_WHEAT
        coefficient: 1
    operator: EQ
    rhs: 100
  ProteinRequirement:
    type: Standard
    name: ProteinRequirement
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 0.2
      - var_name: Ingr_CHICKEN
        coefficient: 0.1
      - var_name: Ingr_MUTTON
        coefficient: 0.15
      - var_name: Ingr_WHEAT
        coefficient: 0.04
    operator: GTE
    rhs: 8
  SaltRequirement:
    type: Standard
    name: SaltRequirement
    coefficients:
      - var_name: Ingr_BEEF
        coefficient: 0.005
      - var_name: Ingr_CHICKEN
        coefficient: 0.002
      - var_name: Ingr_MUTTON
        coefficient: 0.007
      - var_name: Ingr_RICE
        coefficient: 0.002
      - var_name: Ingr_WHEAT
        coefficient: 0.008
    operator: LTE
    rhs: 0.4
variables:
  Ingr_BEEF:
    name: Ingr_BEEF
    var_type: Free
  Ingr_CHICKEN:
    name: Ingr_CHICKEN
    var_type: Free
  Ingr_GEL:
    name: Ingr_GEL
    var_type: Free
  Ingr_MUTTON:
    name: Ingr_MUTTON
    var_type: Free
  Ingr_RICE:
    name: Ingr_RICE
    var_type: Free
  Ingr_WHEAT:
    name: Ingr_WHEAT
    var_type: Free
